@@ -3,6 +3,8 @@ CHANGES-1.3.txt
 
 CHANGES IN CUPS V1.3.5
 
+	- The scheduler generated CoreFoundation errors when run
+	  as a background process.
 	- When printing with number-up > 1, it was possible to get
 	  an extra blank page.
 
